--- a/corpuslinguistics/views/adm/cadastro.html
+++ b/corpuslinguistics/views/adm/cadastro.html
@@ -1,10 +1,17 @@
 {% include 'main_view.tpl' %}
 
-<form method="POST" action="/cadastro">
-    <div>{{ form.username.label }}  : {{ form.username() }}</div>
-    <div>{{ form.email.label }}     : {{ form.email() }}</div>
-    <div>{{ form.password.label }}  : {{ form.password() }}</div>
-    <div>{{ form.butt() }}</div>
+<h1>Cadastro</h1>
+<form method="POST" action="/cadastro" class="coisa">
+    <div>
+        {{ form.username.label }}&nbsp;&nbsp;&nbsp;  {{ form.username(class_="formcadastro") }}
+      </br>
+        {{ form.email.label }}&nbsp;&nbsp;&nbsp;&nbsp;    {{ form.email(class_="formcadastro") }}
+      </br>
+        {{ form.password.label }}&nbsp;&nbsp;&nbsp; {{ form.password(class_="formcadastro") }}
+      </br>
+    {{ form.butt(class_="btn btn-primary formbtn") }}
+    </div>
 </form>
+</div>
 
 <a class="navbar-brand"href="/base">Verificar base de dados!</a>
