--- a/corpuslinguistics/assets/bootstrap.css
+++ b/corpuslinguistics/assets/bootstrap.css
@@ -11,10 +11,35 @@
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
 
+.formcadastro{
+  float:right;
+  height: 45px;
+  width: 300px;
+  margin-left: 2px;
+}
+
+.formbtn{
+  float: right;
+  margin: 5px;
+}
+
+.coisa{
+  display: table;
+}
+
+
 header,
 main,
 nav{
   display: block;
+}
+
+div{
+  padding: 5px;
+}
+
+li{
+  list-style-type: none;
 }
 
 html {
@@ -757,6 +782,27 @@ fieldset[disabled] .btn-primary.active {
   background-color: transparent;
 }
 
+.navbar-brand-r {
+  display: block;
+  max-width: 200px;
+  padding: 15px 15px;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 20px;
+  color: white;
+  text-align: center;
+  float: right;
+}
+
+.navbar-brand-r:hover,
+.navbar-brand-r:focus {
+  color: #5e5e5e;
+  text-decoration: none;
+  background-color: transparent;
+}
+
 .navbar-inverse {
   background-color: #222222;
 }
@@ -957,6 +1003,33 @@ fieldset[disabled] .btn-primary.active {
 .jumbotron h1 {
   line-height: 1;
   color: inherit;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group-sm .form-control {
+  height: 30px;
+  padding: 5px 10px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
+}
+.form-group-sm select.form-control {
+  height: 30px;
+  line-height: 30px;
+}
+.form-group-sm textarea.form-control,
+.form-group-sm select[multiple].form-control {
+  height: auto;
+}
+.form-group-sm .form-control-static {
+  height: 30px;
+  min-height: 32px;
+  padding: 6px 10px;
+  font-size: 12px;
+  line-height: 1.5;
 }
 
 .jumbotron p {
