--- a/corpuslinguistics/views/sistema/comparacao.html
+++ b/corpuslinguistics/views/sistema/comparacao.html
@@ -6,7 +6,7 @@
       </br>
       <p>Lembre-se, eles devem ser duas listas de contagem  </p>
       </br>
-      <form action="/comparacao" method="post" enctype="multipart/form-data">
+      <form action="/compare" method="post" enctype="multipart/form-data">
         <h3>Arquivo 1:</h3>        <input type="file" name="arquivo_0"/>
         <h3>Arquivo 2:</h3>        <input type="file" name="arquivo_1"/>
        </br>
